--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -1,101 +1,63 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="webjars/ui-grid/3.0.1/ui-grid.css">
-
 
 <html>
 <head>
+    <link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="webjars/ui-grid/3.0.1/ui-grid.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Fridgezone</title>
 </head>
 <body ng-app="fridgezone" ng-controller="mainCtrl">
+
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">Fridgezone</a>
+    </div>
+</nav>
+
 <div class="container-fluid">
     <div class="row">
-        <div id="items" class="col-sm-2 col-lg-3">
-            <div id="itemGrid" ui-grid="itemGridOptions" ui-grid-edit ui-grid-row-edit ui-grid-cellnav ui-grid-autoresize class="grid"></div>
+        <div id="items" class="col-sm-6">
+            <div id="itemGrid" ui-grid="itemGridOptions" ui-grid-edit ui-grid-row-edit class="grid"></div>
         </div>
         <br/>
     </div>
     <div class="row">
-        <table id="itemInputTable" class="col-sm-2 col-lg-3" class="table table-striped">
-            <thead>
-            <tr>
-                <th>Item</th>
-                <th>Stock Level</th>
-                <th>Optimal Quantity</th>
-            </tr>
-            </thead>
-            <tr>
-        <td><input type="text" id="itemAddName" ng-model="item.new.name" size="10"/></td>
-        <td><input type="text" id="itemAddStockLevel" ng-model="item.new.stockLevel" size="6"></td>
-        <td><input type="text" id="itemAddOptimalQuantity" ng-model="item.new.optimalQuantity" size="2">
-        <button ng-click="addItem(item.new)" id="addItem" class="btn btn-success btn-xs"><span
-                class="glyphicon glyphicon-ok"></span>Add
-        </button></td>
-            </tr>
-        </table>
+        <div class="form-inline" class="col-sm-3">
+            <form name="itemForm" id="itemForm" novalidate ng-submit="addItem(item.new)">
+                <div class="form-group">
+                    <label class="sr-only" for="itemAddName">Item name</label>
+                    <input type="text" ng-model="item.new.name" class="form-control" id="itemAddName"
+                           placeholder="Item name" ng-maxlength="25" required>
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="itemAddStockLevel">Stock level</label>
+                    <input type="text" ng-model="item.new.stockLevel" class="form-control" id="itemAddStockLevel"
+                           placeholder="Stock Level" ng-maxlength="15" required>
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="itemAddOptimalQuantity">Optimal quantity</label>
+                    <input type="number" ng-model="item.new.optimalQuantity" class="form-control"
+                           id="itemAddOptimalQuantity" placeholder="Optimal Quantity" min="1" max="99" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit" id="addItem" ng-disabled="itemForm.$invalid" class="btn btn-success btn-med"><span
+                            class="glyphicon glyphicon-ok"></span>Add
+                    </button>
+                </div>
+            </form>
+
+        </div>
     </div>
 </div>
 
 <script src="webjars/angular/1.4.4/angular.js" type="application/javascript"></script>
 <script src="webjars/angular-resource/1.4.4/angular-resource.js"></script>
 <script src="webjars/ui-grid/3.0.1/ui-grid.js"></script>
-
-<!--<script src="webjars/angular-ui-bootstrap/0.13.3/ui-bootstrap.js"></script>-->
-
-<script>
-    var fzApp = angular.module('fridgezone', ['ngResource', 'ui.grid', 'ui.grid.edit', 'ui.grid.rowEdit', 'ui.grid.cellNav', 'ui.grid.autoResize']);
-
-    fzApp.factory("Item", function ($resource) {
-        return $resource('api/items/:id', {id: '@id'}, {
-            query: {method: 'GET', params: {id: ''}, isArray: true}
-            , add: {method: 'POST'}
-            , update: {method: 'PUT'}
-        });
-    });
-
-    fzApp.controller("mainCtrl", function ($scope, Item) {
-        $scope.itemList = Item.query();
-
-        $scope.addItem = function (item) {
-            var addedItem = Item.add(item);
-            $scope.itemList.push(addedItem);
-            $scope.item.new = {};
-        }
-
-        $scope.updateItem = function (item) {
-            return Item.update(item);
-        }
-
-        $scope.itemGridOptions={
-            data: $scope.itemList,
-            //enableColumnMenus
-
-            columnDefs: [
-                {field: 'id',  visible: false},
-                {field: 'name', name: 'name', displayName: 'Item', enableCellEdit: true},
-                {field: 'stockLevel', enableCellEdit: true},
-                {field: 'optimalQuantity', enableCellEdit: true}
-            ],
-            rowEditWaitInterval: 1000
-        }
-
-        //CP
-        $scope.saveRow = function(rowEntity){
-            var promise = $scope.updateItem(rowEntity).$promise;
-            $scope.gridApi.rowEdit.setSavePromise(rowEntity, promise);
-        }
-
-        //CP
-        $scope.itemGridOptions.onRegisterApi = function(gridApi){
-            $scope.gridApi = gridApi;
-            gridApi.rowEdit.on.saveRow($scope, $scope.saveRow);
-        };
-
-    });
-
-</script>
+<script src="assets/js/app.js"></script>
+<script src="assets/js/main.ctrl.js"></script>
+<script src="assets/js/services.js"></script>
 
 </body>
 
