--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -31,8 +31,11 @@
                     <input type="text" ng-model="newItem.name" class="form-control" id="itemAddName"
                            placeholder="Item name" ng-maxlength="25" required>
                     <label class="sr-only" for="itemAddStockLevel">Stock level</label>
-                    <input type="text" ng-model="newItem.stockLevel" class="form-control" id="itemAddStockLevel"
-                           placeholder="Stock Level" ng-maxlength="15" required>
+                    <!--<input type="text" ng-model="newItem.stockLevel" class="form-control" id="itemAddStockLevel"-->
+                           <!--placeholder="Stock Level" ng-maxlength="15" required>-->
+                    <select class="form-control" ng-model="newItem.stockLevel" id="itemAddStockLevel" placeholder="Stock Level" required>
+                        <option ng-repeat="level in stockLevelValues">{{level}}</option>
+                    </select>
                     <label class="sr-only" for="itemAddOptimalQuantity">Optimal quantity</label>
                     <input type="number" ng-model="newItem.optimalQuantity" class="form-control"
                            id="itemAddOptimalQuantity" placeholder="Optimal Quantity" min="1" max="99" required>
