--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -53,50 +53,42 @@
         <!--</div>-->
     </div>
 </div>
-------------------------------------------------<br/>
+<br/>
 <div ng-controller="ItemModalCtrl">
-<script type="text/ng-template" id="itemModalTemplate">
-    <div class="modal-header">
-        <h3 class="modal-title">Add/update item</h3>
-    </div>
-    <div class="modal-body">
-        <div class="form-inline" class="col-sm-12">
-            <form name="itemForm" id="itemForm" novalidate ng-submit="saveItem(newItem)">
-                <div class="form-group">
-                    <label class="sr-only" for="itemAddName">Item name</label>
-                    <input type="text" ng-model="newItem.name" class="form-control" id="itemAddName"
-                           placeholder="Item name" ng-maxlength="25" required>
-                    <label class="sr-only" for="itemAddStockLevel">Stock level</label>
-                    <!--<input type="text" ng-model="newItem.stockLevel" class="form-control" id="itemAddStockLevel"-->
-                    <!--placeholder="Stock Level" ng-maxlength="15" required>-->
-                    <select class="form-control" ng-model="newItem.stockLevel" id="itemAddStockLevel" placeholder="Stock Level" required>
-                        <option ng-repeat="level in stockLevelValues">{{level}}</option>
-                    </select>
-                    <label class="sr-only" for="itemAddOptimalQuantity">Optimal quantity</label>
-                    <input type="number" ng-model="newItem.optimalQuantity" class="form-control"
-                           id="itemAddOptimalQuantity" placeholder="Optimal Quantity" min="1" max="99" required>
-                    <input type="hidden" ng-model="newItem.id">
-<!--                    <button type="submit" id="addItem" ng-disabled="itemForm.$invalid" class="btn btn-success btn-med">
-                        <span class="glyphicon glyphicon-ok"></span>{{saveLabel || 'Add'}}
-                    </button>
-                    <button type="button" id="cancelButton" class="btn btn-danger btn-small" ng-click="resetItemForm()">
-                        <span class="glyphicon glyphicon-remove"></span>Cancel
-                    </button>-->
-                </div>
-            </form>
+    <script type="text/ng-template" id="itemModalTemplate">
+        <div class="modal-header">
+            <h3 class="modal-title">Add/update item</h3>
         </div>
-    </div>
-    <div class="modal-footer">
-        <button id="addItem" class="btn btn-primary" type="button" ng-disabled="itemForm.$invalid" ng-click="ok()">
-            <span class="glyphicon glyphicon-ok"></span>{{saveLabel || 'Add'}}
-        </button>
-        <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
+        <div class="modal-body">
+            <div class="form-inline" class="col-sm-12">
+                <form name="itemForm" id="itemForm" novalidate ng-submit="saveItem(newItem)">
+                    <div class="form-group">
+                        <label class="sr-only" for="itemAddName">Item name</label>
+                        <input type="text" ng-model="newItem.name" class="form-control" id="itemAddName"
+                               placeholder="Item name" ng-maxlength="25" required>
+                        <label class="sr-only" for="itemAddStockLevel">Stock level</label>
+                        <select class="form-control" ng-model="newItem.stockLevel" id="itemAddStockLevel" placeholder="Stock Level" required>
+                            <option ng-repeat="level in stockLevelValues">{{level}}</option>
+                        </select>
+                        <label class="sr-only" for="itemAddOptimalQuantity">Optimal quantity</label>
+                        <input type="number" ng-model="newItem.optimalQuantity" class="form-control"
+                               id="itemAddOptimalQuantity" placeholder="Optimal Quantity" min="1" max="99" required>
+                        <input type="hidden" ng-model="newItem.id">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="addItem" class="btn btn-primary" type="button" ng-disabled="itemForm.$invalid" ng-click="ok()">
+                <span class="glyphicon glyphicon-ok"></span>{{saveLabel || 'Add'}}
+            </button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 
-<button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+    <button type="button" class="btn btn-default" ng-click="openItemDialog({})">Add item</button>
+
 </div>
-----------------------------------------------------------------
 
 
 
