--- a/WebContent/assets/style/fridgezone.css
+++ b/WebContent/assets/style/fridgezone.css
@@ -1,5 +1,9 @@
 /*.grid {*/
-    /*width: 500px;*/
-    /*height: 200px;*/
+    /*height: 800px;*/
 /*}*/
+
 .low {background-color: rgba(255,0,0,.1) !important;}
+
+select option[disabled]{
+    display: none;
+}
