used minified js

--- a/WebContent/WEB-INF/views/inventory.html
+++ b/WebContent/WEB-INF/views/inventory.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="webjars/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="webjars/ui-grid/3.0.1/ui-grid.css">
+    <link rel="stylesheet" href="webjars/ui-grid/3.0.1/ui-grid.min.css">
     <link rel="stylesheet" href="assets/style/fridgezone.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,9 +65,9 @@
 
 
 
-<script src="webjars/angular/1.4.4/angular.js" type="application/javascript"></script>
-<script src="webjars/angular-resource/1.4.4/angular-resource.js"></script>
-<script src="webjars/ui-grid/3.0.1/ui-grid.js"></script>
+<script src="webjars/angular/1.4.4/angular.min.js" type="application/javascript"></script>
+<script src="webjars/angular-resource/1.4.4/angular-resource.min.js"></script>
+<script src="webjars/ui-grid/3.0.1/ui-grid.min.js"></script>
 <script src="webjars/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/main.ctrl.js"></script>
